# usd_cpp_utilities

./: .pylintrc  CMakeLists.txt  Doxyfile  README.md  package.py
docs/: index.dox
src/: CMakeLists.txt  __packageinit__.py  boost_conversion_helper.h  common.cpp  common.h  instancer_scale_check.cpp  instancer_scale_check.h  scale_check.cpp  wrap_instancer_scale_check.cpp  wrap_scale_check.cpp
src/python_bindings/: CMakeLists.txt  boost_conversion_helper.h  vector_converter.h  wrap_itermaker.cpp  wrap_scale_check.cpp
src/usd_utilities/: CMakeLists.txt  common.cpp  common.h  itermaker.cpp  scale_check.cpp  scale_check.h
src/usd_utilities/cmake/: UsdUtilitiesConfig.cmake  add_itermaker.cmake  add_scale_check.cmake  add_the_plugin_library.cmake  export_all.cmake  export_scale_check.cmake  export_the_plugin.cmake
src/usd_utilities/include/: itermaker.h  scale_check.h
src/usd_utilities/private/: common.cpp  common.h
tests/: __init__.py  common.py  test_instancer_scale_check.py  test_itermaker.py  test_scale_check.py
